@@ -11,6 +11,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+- - - - - 3.4.0 - [26-11-2018] - - - - - - - - - - - - - - - - - - - -
+^ GET-Parameter url ersetzt durch Module-Parameter
+
 - - - - - 3.3.2 - [xx-xx-2018] - - - - - - - - - - - - - - - - - - - -
 + View Aktuelle Runde
 
